# NitroZZ-

./: .gitignore  CMakeLists.txt  README.md  SaucelelGame.sln  Unique.txt
NitroZ/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  NitroApp.cpp  NitroApp.h  NitroZ.h  NitroZ.vcxproj  NitroZ.vcxproj.filters  NitroZUtils.h  OpenGLSprite.cpp  OpenGLSprite.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
NitroZ/Assets/Shader/: myFragmentShader.glsl  myVertexShader.glsl
NitroZ/GLFWImplementation/: GLFWImplementation.cpp  GlFWImplementation.h
NitroZ/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
SaucelelGame/: CMakeLists.txt  SaucelelGame.vcxproj  SaucelelGame.vcxproj.filters  SaucelelGameApp.cpp  SaucelelGameApp.h  Unit.cpp  Unit.h  main.cpp
SaucelelGame/Assets/Shader/: myFragmentShader.glsl
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stb_image.h  stbi.vcxproj
